--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "cross-env NODE_ENV=production node ./server.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
+    "start:deploy": "node server.js",
+    "build": "mkdir dist && node server.js",
+    "lint": "eslint **/*.js",
+    "lint:fix": "eslint --fix **/*.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +24,44 @@
   },
   "homepage": "https://github.com/viktormashyka/easy-start-wallet-backend#readme",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongoose": "^6.9.2",
-    "morgan": "^1.10.0"
+    "@sendgrid/mail": "^7.7.0",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "commander": "^9.4.1",
+    "cors": "2.8.5",
+    "cross-env": "7.0.3",
+    "dotenv": "^16.0.3",
+    "express": "4.17.1",
+    "firebase": "^9.17.1",
+    "gravatar": "^1.8.2",
+    "http-errors": "^2.0.0",
+    "jimp": "^0.16.2",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
+    "mongoose": "^6.7.3",
+    "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "3.3.4",
+    "node-fetch": "2.6.9",
+    "nodemailer": "^6.9.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "supertest": "^6.3.3",
+    "swagger-ui-express": "^4.6.1",
+    "uniqid": "^5.4.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "eslint": "7.19.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "16.0.3",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "5.2.0",
+    "jest": "^29.3.1",
+    "nodemon": "2.0.15",
+    "npx": "^10.2.2"
   }
 }
